--- a/pages/home.css
+++ b/pages/home.css
@@ -1,3 +1,11 @@
+/* 반응형 */
+@media screen and (min-width:1012px) and (max-width:1824px){
+    .col{
+        width: 34%;
+    }
+}
+
+
 /* 스크롤바 없애기 */
 body::-webkit-scrollbar{
     display:none;
