--- a/pages/index.css
+++ b/pages/index.css
@@ -5,6 +5,11 @@
     }
 }
 
+/* 배경화면 */
+.body{
+    background: url(img/background.svg);
+    /* background-size: 1700px 1000px; */
+}
 
 /* 스크롤바 없애기 */
 body::-webkit-scrollbar{
@@ -14,7 +19,8 @@ body::-webkit-scrollbar{
 /* 언어 번환 버튼 */
 .lang-btn{
     display: inline-block;
-    background: linear-gradient(to right, rgb(249, 205, 164), rgb(248, 233, 217), rgb(246, 176, 139));
+    background: linear-gradient(to right, rgb(229, 226, 222), rgb(255, 252, 246), rgb(229, 226, 222));
+    /* background: linear-gradient(to right, rgb(249, 205, 164), rgb(248, 233, 217), rgb(246, 176, 139)); */
     border: 2px solid rgb(216, 139, 116);
     position: fixed;
     top: 20px;
@@ -66,6 +72,7 @@ body::-webkit-scrollbar{
     border-radius: 100px;
     background-color: rgb(255, 255, 255);
     box-shadow: 3px 3px 15px rgb(190, 103, 72);
+    filter: opacity(0.9) drop-shadow(0 0 0 rgb(201, 27, 0));
 }
 
 .profile-name{
@@ -266,13 +273,14 @@ body::-webkit-scrollbar{
     height: 100%;
     position: relative;
     top: -55px;
+    /* -webkit-text-stroke: 0.2px rgb(227, 233, 238); */
 }
 
 .col{
     display: inline-block;
     width: 45.6%;
     height: 100%;
-    padding: 0 2%;
+    padding: 0 3%;
     border-bottom: rgb(138, 145, 146) 2px solid;
 }
 .left-hand{
